--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -12,7 +12,8 @@ body {
 
 .title {
   background: #e3f4ff;
-  margin: 8px 0px;
+  margin-top: 0px;
+  margin-bottom: 8px;
   padding: 8px;
   font-size: 16px;
 }
@@ -33,6 +34,7 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  text-align: center;
+  display: block;
+  margin: 0 auto;
   padding: 8px 24px;
 }
