--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -7,13 +7,12 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
-  justify-content: stretch;
+  
 }
 
 img {
   width: 600px;
-  flex-shrink: 0;
+  height: 225px;
   justify-content: center;
 }
 
@@ -33,28 +32,20 @@ input {
   margin-bottom: 16px;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  
-}
-
 .content {
   display: flex;
   justify-content: center;
-  align-self: center;
-  flex-wrap: wrap;
-  width: 600px;
-  padding: 20px;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
 }
-
-
 
 ul {
   list-style-type: none;
-  margin: 10px;
-  padding: 10px;
-  
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
 }
 
 ul li {
@@ -63,9 +54,6 @@ ul li {
 
 .footer {
   background-color: #eeeeee;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
 }
 
 a {
@@ -73,8 +61,9 @@ a {
   color: rgb(77, 77, 77);
 }
 
-/* 
-  content needs to be centered, but isn't. 
-  links need gaps and proper spacing.
-  lock header and footer.
-*/
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
